Update to filename

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <header>
             <div class="title">Robotic & Propulsion Engineer <br> <br>
 
-              <a href="https://www.linkedin.com/in/alexanderkinkade/" target="_blank"><img src="images/linkedin-3-512.PNG"  alt="LINKEDIN" style = "height: 42px;">
+              <a href="https://www.linkedin.com/in/alexanderkinkade/" target="_blank"><img src="images/linkedin-3-512.png"  alt="LINKEDIN" style = "height: 42px;">
               </a>            
 
             </div>
