--- a/index.html
+++ b/index.html
@@ -239,20 +239,15 @@
         </div>
         
         
-        <hr class="solid">
+        <hr class="solid" data-aos="zoom-in">
 
-        <div id = "methods" data-aos="zoom-in">
+        <div id = "methods" data-aos="fade-up">
           <br>
             <h1>METHODOLOGIES</h1>
             <p>
-              My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  <br><br>
-
-
-              <b>Worplace Philosophies</b><br>
-              It is important that the workplace prioritizes quality designs and products, over profits. While profit is important, making sure a company is the best at what they do and delivering quality results are more important. A culture with profits as the main metric for corporate success will eventually be phased out by a more innovative company.
-              People should feel like they can talk openly to others and feel like they belong in the workplace. I believe that what debilitates most companies is a culture with high turnover rates. Workers should come first, and their needs are to be the main priority.
-
-
+              My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  
+              <br>
+              <br>
             </p>
         </div>
 
