--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
           <br>
             <h1>METHODOLOGIES</h1>
             <p>
-              My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  
+              My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  <br><br>
+              My work mantra is to focus on delivering the best solution and product given the constraints instead of focusing on how to make the most amount of profit.
+
+              “There should be more focus on the product or service itself, less time on board meetings, less time on financials. When I go spend time on the factory floor or really using the cars or thinking about the rockets...that’s where things have gone better.” - Elon Musk, 2020
               <br>
               <br>
             </p>
@@ -280,7 +283,7 @@
             <img src="images/sts.jpg" alt="NASA Astronaut EVA" style="max-width: 15%; height: auto;">
             
 
-            <p>My dream job is to become an astronaut, and perform an EVA; repairing something in outerspace. It is a passion that comes from all of the things I grew up loving. The excitement of adventure, the science and problems on engineering, and the satisfaction of building something with your hands. I dream of the day where I can make all of this a reality; and, believe it is in my power to make it happen. One day humanity will see the earth as the Pale Blue Dot that Carl Sagan once described it as. </p>
+            <p>My dream job is to become an astronaut, and perform an EVA; repairing something in outerspace. It is a passion that comes from all of the things I grew up loving. The excitement of adventure, the science and problems of engineering, and the satisfaction of building something with your hands. I dream of the day where I can make all of this a reality; and, believe it is in my power to make it happen. One day humanity will see the earth as the Pale Blue Dot that Carl Sagan once described it as. </p>
             <br>
             <p><i>“Exploration is in our nature. We began as wanderers, and we are wanderers still. We have lingered long enough on the shores of the cosmic ocean. We are ready at last to set sail for the stars.”</i></p>
             <p><i>-Carl Sagan, Cosmos</i></p>
