--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <br>
             </p>
             <div style="text-align:center;">
-                <a href="/docs/LexRes11.pdf" download>
+                <a href="/docs/LexRes1_4.pdf" download>
                   Download my Resume
                 </a>
             </div>
