--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           <br>
             <h1> PROFESSIONAL </h1>  <h1>EXPERIENCE</h1>
             <p><b>Honeywell</b></p>
-            <p>Controls Software Engineer Feb 2019 - Present</p>
+            <p>Mechanical Engineer Feb 2021 - Present</p>
+            <p>Transferred to the Mechanical Dept. for personal growth and broadening of knowledge. Lex currently supports large scale projects by drafting installation drawings and ordering parts for on-site install.</p>
+            <p>Controls Software Engineer Feb 2019 - Feb 2021</p>
             <p>Recognized at the department level and by external customers for outstanding service by providing fast, and thorough solutions to problems. Lex has a reputation within the company as one who is reliable, ready at a moment's notice, and the person to send when something urgently needs fixed. His day to day activities are programming automation systems and traveling to the customer sites for commissioning and maintenance.</p>
             <br>
             <br>
@@ -170,8 +172,9 @@
             <h1>METHODOLOGIES</h1>
             <p>
               My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  <br><br>
-              My work mantra is to focus on delivering the best solution and product given the constraints instead of focusing on how to make the most amount of profit.
-              “There should be more focus on the product or service itself, less time on board meetings, less time on financials. When I go spend time on the factory floor or really using the cars or thinking about the rockets...that’s where things have gone better.” <br>- Elon Musk, 2020
+
+              I 
+           
               <br>
               <br>
             </p>
