--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
             <h1>METHODOLOGIES</h1>
             <p>
               My personal career objectives are to take initiative with all assigned projects, maintain my professional integrity, and hone in on precise results. As each day passes, I aim to be a better person than I was the day prior in work, and in life. I aim to maximize my leadership potential, communication and problem solving skills. I value punctuality and adaptability in work. It is important to be flexible to fast changing schedules in a dynamic and changing tech industry.  <br><br>
-
-              I 
-           
+              My work mantra is to focus on delivering the best solution and product given the constraints instead of focusing on how to make the most amount of profit.
+              “There should be more focus on the product or service itself, less time on board meetings, less time on financials. When I go spend time on the factory floor or really using the cars or thinking about the rockets...that’s where things have gone better.” <br>- Elon Musk, 2020
               <br>
               <br>
             </p>
