--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
         <div id = "experience" data-aos="fade-up">
           <br>
             <h1> PROFESSIONAL </h1>  <h1>EXPERIENCE</h1>
+            <p><b>United States Air Force</b></p>
+            <p>Electrical Engineer May 2021 - Present</p>
+            <p>Supporting the D.o.D. and their initiatives for national defense.</p>
+            <br>
+            <br>
+            <br>
+            <br>
             <p><b>Honeywell</b></p>
             <p>Mechanical Engineer Feb 2021 - Present</p>
             <p>Transferred to the Mechanical Dept. for personal growth and broadening of knowledge. Lex currently supports large scale projects by drafting installation drawings and ordering parts for on-site install.</p>
