--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id = "home" data-aos="fade-up"> 
           <div class="ME">
             <img src="images/040.jpg" alt="Lex Kinkade Portrait" style="margin-left: 16%;max-width: 30%; height: auto;">
-            <p>In 2017, Alexander (Lex) Kinkade graduated from Wright State University, where he majored in Electrical Engineering. He currently works for Honeywell as a Software Controls Engineer; where he programs conveyor and robots to automate industrial supply chain buildings for companies. During this time he has been honored with multiple internal awards by management and department executives for his contributions. He emphasizes how critical it is to "do it right the first time, or don't do it at all." Something that his father instilled in him early on in his life.  
+            <p>In 2017, Alexander (Lex) Kinkade graduated from Wright State University, where he majored in Electrical Engineering. Currently, working for the U.S. Government, he emphasizes how critical it is to "do it right the first time, or don't do it at all." Something that his father instilled in him early on in his life.  
             <br>
             <br>
             Born in Ogden, UT, he grew up with an engineering father from Illinois and a elementary school teaching mother from Central America. In 2005, his father and family was transferred to Ohio by the U.S. Air Force, which is where he has resided since. Early on, his father instilled critical thinking and problem solving; his mother instilled integrity and compassion for those less fortunate. His mother took the family abroad, he was able to travel to third-world countries at an early age. Opening his eyes opened to life outside of the United States.
@@ -124,7 +124,7 @@
             <br>
             <br>
             <p><b>Honeywell</b></p>
-            <p>Mechanical Engineer Feb 2021 - Present</p>
+            <p>Mechanical Engineer Feb 2021 - May 2021</p>
             <p>Transferred to the Mechanical Dept. for personal growth and broadening of knowledge. Lex currently supports large scale projects by drafting installation drawings and ordering parts for on-site install.</p>
             <p>Controls Software Engineer Feb 2019 - Feb 2021</p>
             <p>Recognized at the department level and by external customers for outstanding service by providing fast, and thorough solutions to problems. Lex has a reputation within the company as one who is reliable, ready at a moment's notice, and the person to send when something urgently needs fixed. His day to day activities are programming automation systems and traveling to the customer sites for commissioning and maintenance.</p>
